#2 - Google Fonts Integration

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 	<head>
 		<title> Jeffrey Ryan R. Alonsagay | Web Developer Portfolio</title>
 	
+
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+
 		<link rel ="stylesheet" type ="text/css" href ="style.css">
+
+
 		
 	</head>
 		
 	<body>
 
-		<font face = "Century Gothic">
+		
 		<div class = "container">
 			<section id = "landing">
 				<h1> Full Stack Developer </h1>
