--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 
+
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
 		<link rel ="stylesheet" type ="text/css" href ="style.css">
 
 
@@ -17,8 +21,32 @@
 		
 	<body>
 
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		    <ul class="navbar-nav mx-auto">
+		      <li class="nav-item">
+		      	<a href="#landing" class="nav-link"> Home </a>
+		      </li>
+		      <li class="nav-item">
+		      	<a href="#gallery" class="nav-link"> Gallery </a>
+		      </li>
+		    </ul>
+		  </div>
+		</nav>
+
+
 		
-		<div class = "container">
+		<div class ="container-fluid">
+
+
+
+
+
+
 			<section id = "landing">
 				<h1> Full Stack Developer </h1>
 				<p> Hi! My name is Jeff Cute and I love building things from scratch. </p>
@@ -43,6 +71,12 @@
 
 			</section>
 			</div>
+
+			<!-- Bootstrap Scripts -->
+			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+			
+
 
 	</body>
 
