--- a/index.html
+++ b/index.html
@@ -47,14 +47,17 @@
 
 
 
-			<section id = "landing">
+			<section class="jumbotron text-center mt-3" id ="landing">
 				<h1> Full Stack Developer </h1>
 				<p> Hi! My name is Jeff Cute and I love building things from scratch. </p>
 				<img src ="images/dp.png">
 			</section>
-			<section id = "gallery"></section>
-				<h2>Languages I Speak </h2>
+
+			<section class="text-center" id ="gallery">
 				
+
+				<h2>Languages I Speak</h2>
+
 				<ul>
 					<li>HTML</li>
 					<li>CSS</li>
